<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/frameLayout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="?attr/actionBarSize"
            android:weightSum="100">

            <TextView
                android:id="@+id/textView_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_person"
                android:textSize="32dp"/>

            <TextView
                android:id="@+id/textView_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_position" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="10dp"
                android:layout_weight="60">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/unknown"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="10dp" />

                <Button
                    android:id="@+id/button_accept"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/darker_gray"
                    android:enabled="false"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:text="@string/Reject"
                    android:textColorLink="@android:color/holo_red_light"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintHeight_default="wrap"
                    app:layout_constraintLeft_toLeftOf="@+id/imageView"
                    app:layout_constraintWidth_default="wrap"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/button_reject"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:enabled="false"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:text="@string/Button_accept"
                    android:textColorLink="@android:color/holo_green_dark"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintHeight_default="wrap"
                    app:layout_constraintRight_toRightOf="@+id/imageView"
                    app:layout_constraintWidth_default="wrap"
                    tools:ignore="MissingConstraints" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/textView_log"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:text="@string/textView_log"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>

    </FrameLayout>


    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@layout/layout_drawer_menu"
        app:headerLayout="@layout/layout_drawer_menu_header"/>

</android.support.v4.widget.DrawerLayout>